syntax = "proto3";

package emails;


option go_package = "github.com/sirjager/rpcs/emails";


message EmailsSendMailRequest {
    string sender = 1; 
    string receiver = 2;
    string subject = 3;
    string body = 4;
}

message EmailsSendMailResponse {
    string message = 1;
}
