syntax = "proto3";

package emails;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


import "rpc-health.emails.proto";
import "rpc-send.emails.proto";

option go_package = "github.com/sirjager/rpcs/emails";



option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: { 
        title: "Emails Api";
        version: "0.2";
        contact: {
            name:   "Ankur Kumar";
            url: "https://github.com/sirjager";
        };
    };
};

service Emails {

    rpc EmailsHealth(EmailsHealthRequest) returns (EmailsHealthResponse) {
        option (google.api.http) = {
            get: "/health"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "use this route to check if api is working or not";
            summary: "Api Health";
            tags: "System";
        };
    }

// ------------------------------------------------------------ SendEmail
    rpc EmailsSendMail(EmailsSendMailRequest) returns (EmailsSendMailResponse) {
        option (google.api.http) = {
            post: "/v1/send"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "use this route to send email";
            summary: "Send Email";
            tags: "Emails";
        };
    }

}
